ci: Verify kubectl connection

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -239,7 +239,7 @@ jobs:
       - name: Verify kubectl connection
         run: |
           echo "Testing kubectl connection..."
-          kubectl get nodes --validate=false
+          kubectl get ns
 
       - name: Set up Helm
         uses: azure/setup-helm@v4.3.0
