--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -234,11 +234,13 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
+          echo "Updating kubeconfig..."
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }} --verbose
           
       - name: Verify kubectl connection
         run: |
           echo "Testing kubectl connection..."
+          kubectl config current-context
           kubectl get ns
 
       - name: Set up Helm
@@ -254,13 +256,12 @@ jobs:
           curl -L https://github.com/helmfile/helmfile/releases/download/v0.155.0/helmfile_0.155.0_linux_amd64.tar.gz | tar xz
           sudo mv helmfile /usr/local/bin/
 
-      - name: Change directory
-        run: |
-          cd deploy/helm
-
       - name: Run helmfile apply for production
         run: |
+          cd deploy/helm
           INPUT_VALUES="--state-values-set=backend.image.repository=${{ needs.build-and-push.outputs.backend-image }} --state-values-set=frontend.image.repository=${{ needs.build-and-push.outputs.frontend-image }} --state-values-set=contracts.image.repository=${{ needs.build-and-push.outputs.contracts-image }}"
+          echo "Running helmfile from directory: $(pwd)"
+          echo "Helmfile command: helmfile --environment production --namespace bullpawn-production $INPUT_VALUES apply --wait"
           helmfile --environment production --namespace bullpawn-production $INPUT_VALUES apply --wait
 
   # Security scanning
