--- a/.github/workflows/deploy-contracts.yml
+++ b/.github/workflows/deploy-contracts.yml
@@ -1,8 +1,6 @@
 name: Deploy Smart Contracts
 
 on:
-  push:
-    branches: [ main, develop ]
   workflow_dispatch:
 
 env:
@@ -30,13 +28,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: 'contracts/package-lock.json'
 
     - name: Install dependencies
       run: |
         cd contracts
-        npm ci
+        npm install
 
     - name: Build contracts
       run: |
