--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,8 +15,12 @@ RUN npm run build
 # Install serve to serve static files
 RUN npm install -g serve
 
+# Copy startup script
+COPY start.sh /app/start.sh
+RUN chmod +x /app/start.sh
+
 # Expose port
 EXPOSE 3000
 
-# Start the application with serve
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Start the application with the startup script
+CMD ["/app/start.sh"]
