--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,6 @@ jobs:
             dockerfile: ./frontend/Dockerfile
             build-context: ./frontend
             ecr-repo: bullpawn-dev-frontend
-          - name: contracts
-            dockerfile: ./contracts/Dockerfile
-            build-context: ./contracts
-            ecr-repo: bullpawn-dev-contracts
     
     outputs:
       tag: ${{ steps.set-outputs.outputs.tag }}
@@ -162,7 +158,7 @@ jobs:
 
   #     - name: Run helmfile apply for development
   #       run: |
-  #         INPUT_VALUES="--state-values-set=backend.image.repository=${{ needs.build-and-push.outputs.backend-image }} --state-values-set=frontend.image.repository=${{ needs.build-and-push.outputs.frontend-image }} --state-values-set=contracts.image.repository=${{ needs.build-and-push.outputs.contracts-image }}"
+  #         INPUT_VALUES="--state-values-set=backend.image.repository=${{ needs.build-and-push.outputs.backend-image }} --state-values-set=frontend.image.repository=${{ needs.build-and-push.outputs.frontend-image }}"
   #         helmfile --environment development --namespace bullpawn-development $INPUT_VALUES apply --wait
 
   # deploy-staging:
@@ -209,7 +205,7 @@ jobs:
 
   #     - name: Run helmfile apply for staging
   #       run: |
-  #         INPUT_VALUES="--state-values-set=backend.image.repository=${{ needs.build-and-push.outputs.backend-image }} --state-values-set=frontend.image.repository=${{ needs.build-and-push.outputs.frontend-image }} --state-values-set=contracts.image.repository=${{ needs.build-and-push.outputs.contracts-image }}"
+  #         INPUT_VALUES="--state-values-set=backend.image.repository=${{ needs.build-and-push.outputs.backend-image }} --state-values-set=frontend.image.repository=${{ needs.build-and-push.outputs.frontend-image }}"
   #         helmfile --environment staging --namespace bullpawn-staging $INPUT_VALUES apply --wait
 
   deploy-production:
@@ -262,7 +258,7 @@ jobs:
           ECR_REGISTRY=$(aws sts get-caller-identity --query Account --output text).dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
           echo "ECR Registry: $ECR_REGISTRY"
           
-          INPUT_VALUES="--state-values-set=backend.image.repository=$ECR_REGISTRY/bullpawn-dev-backend --state-values-set=backend.image.tag=${{ needs.build-and-push.outputs.tag }} --state-values-set=frontend.image.repository=$ECR_REGISTRY/bullpawn-dev-frontend --state-values-set=frontend.image.tag=${{ needs.build-and-push.outputs.tag }} --state-values-set=contracts.image.repository=$ECR_REGISTRY/bullpawn-dev-contracts --state-values-set=contracts.image.tag=${{ needs.build-and-push.outputs.tag }}"
+          INPUT_VALUES="--state-values-set=backend.image.repository=$ECR_REGISTRY/bullpawn-dev-backend --state-values-set=backend.image.tag=${{ needs.build-and-push.outputs.tag }} --state-values-set=frontend.image.repository=$ECR_REGISTRY/bullpawn-dev-frontend --state-values-set=frontend.image.tag=${{ needs.build-and-push.outputs.tag }}"
           echo "Running helmfile from directory: $(pwd)"
           echo "Helmfile command: helmfile --environment production --namespace bullpawn-production $INPUT_VALUES apply --wait"
           helmfile --environment production --namespace bullpawn-production $INPUT_VALUES apply --wait
