--- a/.github/workflows/deploy-contracts.yml
+++ b/.github/workflows/deploy-contracts.yml
@@ -40,6 +40,7 @@ jobs:
         npm run build
 
     - name: Deploy contracts to zkSync
+      id: deploy
       env:
         PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
         USDT_CONTRACT_ADDRESS: "0x5C221E77624690fff6dd7412D22CCeB3F3167453"
@@ -47,20 +48,24 @@ jobs:
         CHAINLINK_BTC_USD: "0x95Bc57e794aeb02E4a16eff406147f3ce2531F83"
       run: |
         cd contracts
-        npm run deploy
+        npm run deploy 2>&1 | tee deployment.log
 
     - name: Extract contract addresses
       id: extract-addresses
       run: |
         cd contracts
-        # Extract addresses from the deployment artifacts
-        PAWN_ADDRESS=$(jq -r '.address' artifacts-zk/PawnContract.json)
-        ORACLE_ADDRESS=$(jq -r '.address' artifacts-zk/MultiOracle.json)
-        ETH_FEED_ADDRESS=$(jq -r '.address' artifacts-zk/ETHPriceFeed.json)
-        BTC_FEED_ADDRESS=$(jq -r '.address' artifacts-zk/BTCPriceFeed.json)
+        # Extract addresses from the deployment log
+        USDT_ADDRESS=$(grep "MockUSDT contract address:" deployment.log | cut -d' ' -f4)
+        PAWN_ADDRESS=$(grep "PawnSystem contract address:" deployment.log | cut -d' ' -f4)
         
         # Set outputs for use in subsequent steps
+        echo "USDT_CONTRACT_ADDRESS=${USDT_ADDRESS}" >> $GITHUB_OUTPUT
         echo "PAWN_CONTRACT_ADDRESS=${PAWN_ADDRESS}" >> $GITHUB_OUTPUT
-        echo "MULTI_ORACLE_ADDRESS=${ORACLE_ADDRESS}" >> $GITHUB_OUTPUT
-        echo "ETH_PRICE_FEED_ADDRESS=${ETH_FEED_ADDRESS}" >> $GITHUB_OUTPUT
-        echo "BTC_PRICE_FEED_ADDRESS=${BTC_FEED_ADDRESS}" >> $GITHUB_OUTPUT
+        echo "MULTI_ORACLE_ADDRESS=${PAWN_ADDRESS}" >> $GITHUB_OUTPUT
+        echo "ETH_PRICE_FEED_ADDRESS=${PAWN_ADDRESS}" >> $GITHUB_OUTPUT
+        echo "BTC_PRICE_FEED_ADDRESS=${PAWN_ADDRESS}" >> $GITHUB_OUTPUT
+        
+        # Display the extracted addresses
+        echo "Extracted contract addresses:"
+        echo "USDT: ${USDT_ADDRESS}"
+        echo "PawnSystem: ${PAWN_ADDRESS}"
