--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,15 @@
     "ethers": "^5.7.2",
     "axios": "^1.5.0",
     "joi": "^17.9.2",
-    "express-rate-limit": "^6.10.0"
+    "express-rate-limit": "^6.10.0",
+    "prom-client": "^15.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
+    "@types/prom-client": "^15.0.0",
     "typescript": "^5.1.6",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
