--- a/deploy/helm/bullpawn/templates/service.yaml
+++ b/deploy/helm/bullpawn/templates/service.yaml
@@ -13,8 +13,8 @@ spec:
       protocol: TCP
       name: http
     {{- if .Values.serviceMonitor.enabled }}
-    - port: 8080
-      targetPort: 8080
+    - port: {{ .Values.service.port }}
+      targetPort: http
       protocol: TCP
       name: metrics
     {{- end }}
