Fix ServiceMonitor template to use configurable port and path
- Update ServiceMonitor template to use .Values.serviceMonitor.port and .Values.serviceMonitor.path
- Set port to 'metrics' and path to '/api/metrics' in backend values
- This ensures ServiceMonitor points to the correct metrics endpoint

--- a/deploy/helm/bullpawn/templates/servicemonitor.yaml
+++ b/deploy/helm/bullpawn/templates/servicemonitor.yaml
@@ -14,8 +14,8 @@ spec:
     matchLabels:
       {{- include "bullpawn.selectorLabels" . | nindent 6 }}
   endpoints:
-  - port: metrics
-    path: {{ .Values.serviceMonitor.metricsPath | default "/metrics" }}
+  - port: {{ .Values.serviceMonitor.port | default "metrics" }}
+    path: {{ .Values.serviceMonitor.path | default "/metrics" }}
     interval: {{ .Values.serviceMonitor.interval | default "30s" }}
     scrapeTimeout: {{ .Values.serviceMonitor.scrapeTimeout | default "10s" }}
     {{- with .Values.serviceMonitor.relabelings }}
